kubernetes/cka_mock_exam/02.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod1
  name: pod1
spec:
  containers:
  - image: httpd:2.4.41-alpine
    name: pod1-container
    resources: {}
  tolerations:
  - key: "node-role.kubernetes.io/master"
    effect: NoSchedule
  nodeName: "kubemaster"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
