kubernetes/cka_mock_exam/06_3.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: safari
  name: safari
  namespace: project-tiger
spec:
  volumes:
   - name: myvol1
     persistentVolumeClaim:
       claimName: "safari-pvc"
  containers:
  - image: httpd:2.4.41-alpine
    name: safari
    volumeMounts:
    - mountPath:  "/tmp/safari-data"
      name: myvol1
