kubernetes/cka_mock_exam/06_4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: safari
  name: safari
  namespace: project-tiger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: safari
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: safari
    spec:
      volumes:
       - name: myvol1
         persistentVolumeClaim:
           claimName: "safari-pvc"
      containers:
      - image: httpd:2.4.41-alpine
        name: httpd
        volumeMounts:
         - mountPath:  "/tmp/safari-data"
           name: myvol1
