kubernetes/cka_mock_exam/09.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: manual-schedule
  name: manual-schedule
spec:
  nodeName: kubemaster
  tolerations:
  - key: "node-role.kubernetes.io/master"
    operator: Exists
    effect: NoSchedule
  containers:
  - image: httpd:2.4-alpine
    name: manual-schedule
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
