kubernetes/cka_mock_exam/11.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    id: ds-important 
    uuid: 18426a0b-5f59-4e10-923f-c0e078e82462
  name: ds-important
  namespace: project-tiger
spec:
  selector:
    matchLabels:
      id: ds-important 
      uuid: 18426a0b-5f59-4e10-923f-c0e078e82462
  template:
    metadata:
      labels:
        id: ds-important 
        uuid: 18426a0b-5f59-4e10-923f-c0e078e82462
    spec:
      tolerations:
      -  key: "node-role.kubernetes.io/master"
         operator: Exists
         effect: "NoSchedule"
      containers:
      - image: httpd:2.4-alpine
        name: httpd
        resources: 
          requests:
              cpu: 10m 
              memory: 10Mi
