kubernetes/cka_mock_exam/13.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-playground
spec:
  volumes:
    - name: task-pv-storage
      emptyDir: {}
  containers:
    - name: c1
      image: nginx:1.17.6-alpine
    - name: c2
      image: busybox:1.31.1
      volumeMounts:
        - mountPath: "/vol"
          name: task-pv-storage
      command: 
      - sh 
      - -c 
      - "while true; do date >> /vol/date.log; sleep 1; done"
    - name: c3
      image: busybox:1.31.1
      command:
      - sh 
      - -c 
      - "tail -f /vol/date.log"
      volumeMounts:
        - mountPath: "/vol"
          name: task-pv-storage
