kubernetes/cka_mock_exam/liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: live
spec:
  containers:
  - name: liveness
    image: k8s.gcr.io/busybox
    args:
    - /bin/sh
    - -c
    - touch /tmp/healthy; touch /tmp/running; sleep 30; rm -f /tmp/running; sleep 10; touch /tmp/running; sleep 600
    livenessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 5
      periodSeconds: 5
    readinessProbe:
      exec:
        command:
        - cat
        - /tmp/running
      initialDelaySeconds: 5
      periodSeconds: 5
