kubernetes/cka_mock_exam/pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  volumes:
    - name: pv1
      persistentVolumeClaim:
        claimName: pvc1
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv1
