kubernetes/cka_mock_exam/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: linux
  policyTypes:
    - Egress 
  egress:
    - 
      to: 
        - podSelector:
            matchLabels:
              run: nginx
      ports: 
      - protocol: TCP
        port: 80
    - 
      to: 
      - podSelector:
          matchLabels:
            app: nginx
      ports: 
      - protocol: TCP
        port: 8080

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx-pp
spec:
  containers:
  - image: nginx
    name: nginx
  dnsPolicy: ClusterFirst
  restartPolicy: Always

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: linux
  name: linux-pp
spec:
  containers:
  - image: wbitt/network-multitool
    name: linux
  dnsPolicy: ClusterFirst
  restartPolicy: Always
